k8s/flux/clusters/talos-cluster/apps/test-web-app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: test-web-app
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`test-web-app.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: test-web-app
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`test-web-app.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: clusterip
      port: 80
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
